# mp4-converter

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml
scripts/: download-ffmpeg.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: converter.rs  main.rs
